--- a/math/simplicial_homology_and_cohomology.tex
+++ b/math/simplicial_homology_and_cohomology.tex
@@ -23,31 +23,29 @@ Rigorous definition are based on~\cite{munkres}.
 
 A simplicial complex is a generalization of a triangulation. The role of triangles is
 played by the simplices. A \(d\)-simplex is collection of \(d+1\) affinely independent points
-in \(\R^{d}\), affinely indepedent means that the relative vectors are linearly independent:
+in \(\R^{d}\), affinely independent means that the relative vectors are linearly independent:
 \begin{displaymath}
   a_0, \dots, a_d \quad\textrm{affinely independent}
   \iff
   a_1-a_0, \dots, a_d-a_0 \quad\textrm{linearly independent}.
 \end{displaymath}
 Naturally, we can associate a geometric realization of a simplex by taking is convex hull.
-A simplicial complex \(K\) is a collection of simplices closed under the relation of subsets and 
-closed under the operation of intersection. Explicitely,
+A simplicial complex \(K\) is a collection of simplices closed under taking subsets and 
+closed under the operation of intersection. Explicitly,
 \begin{enumerate}
   \item for any \(P\in K\), \(Q\in K\) for any \(Q\subset P\),
   \item for any \(P, S\in K\), \(P\cap S \in K\).
 \end{enumerate}
 
-\section{Simplicial Homology}
+The last definition is actually more general and it's called an abstract simplicial
+complex.
 
-We start with the usual introduction to simplicial homology and then move into
-the geometry.
+\section{Simplicial Homology}
 
 \subsection{Quick and Dirty Introduction to Simplicial Homology}
 
-Let \(K\) be a simplicial complex and give it an orientation. That is, every
-simplex now is not just a set, but an ordered list. We declare two orientations
-of a simplex to be the same if they differ by an even permutation. Define the
-oriented indicator function of an (oriented) simplex \(P\) as follows:
+Let \(K\) be a simplicial complex. Define the oriented indicator function of an
+(oriented) simplex \(P\) as follows:
 \begin{displaymath}
   c_P(Q) =
   \left\{
@@ -55,19 +53,22 @@ oriented indicator function of an (oriented) simplex \(P\) as follows:
     1 &\quad \textrm{if } Q=P\\
     -1 &\quad \textrm{if } Q=P\text{ as sets but differ in orientation}\\
     0 &\quad \textrm{if} Q\ne P
-  \end{aligned}.
-  \right.
+  \end{aligned}
+  \right.,
 \end{displaymath}
-Let \(K^{(d)}\) be the simplices of dimension \(d\) of \(K\). A \(d\)-chain is
-a linear function from \(K^{(d)}\) to \(R\), where \(R\) is a conmutative ring with unity
-(I prefer to just set it to \(\R\)).
-The set of all \(d\)-chains is denoted as \(C_d(K)\) and have a group structure
-when coupled with point-wise addition. Then, every element can be written as:
+where an orientation of a simplex is an equivalence class of its ordered vertices
+with two elements being in the same class if their ordering differ by an even
+permutation.
+
+Denote by \(K^{(d)}\) the simplices of dimension \(d\) of \(K\). A \(d\)-chain is
+a linear function from \(K^{(d)}\) to \(\Z\), where \(\Z\).
+The set of all \(d\)-chains is denoted as \(C_d(K)\). With point-wise addition
+this set becomes a free abelian group whose generators are the oriented indicators.
 \begin{displaymath}
   c\in C_d(K) \iff c = \sum_{P\in K^{(d)}} \alpha_P c_P
-  \quad \alpha_P\in R.
+  \quad \alpha_P\in \Z.
 \end{displaymath}
-The about equations says that the group is free and that the oriented indicators are a basis.
+
 Define the linear map \(\partial_d\colon C_d \to C_{d-1}\) acting as
 \begin{displaymath}
   \partial_d [p_0, \ldots, p_d] = \sum_{i=0}^{d} (-1)^{i} [p_0, \ldots, \hat p_i, \ldots, p_d]
@@ -82,44 +83,30 @@ This map is called the boundary map and satisfies \(\partial_{d} \circ
 
 \subsection{The Geometry of Simplicial Homology}
 
-A \(d\)-chain is a selection of simplices (by definition) and can be thought as a 
-subcomplex or even a \(d\)-dimensional walk. Let's start simple. Consider the simplicial
-complex shown below.
+\textbf{What is an orientation?}~Consider the filled triangle with vertices
+\(A,B\) and \(C\). The usual dry definition (given above) of an orientation is an
+ordered list of the vertices: \([A,B,C]\), \([A,C,B]\), etc. with two ordered
+list being identified if they differ by an even permutation. I want to convince
+you that an orientation is a way to walk around the simplex.
 
-\begin{center}
-\begin{tikzpicture}[scale=1.8]
-  \draw[fill=gray!50!white] (1, 0) -- (2, 1) node[above] {3} -- (2, 0) node[below] {4} -- cycle; 
-  \draw (0,0) node[below] {0} -- (0,1) node[above] {1} -- (1,0) node[below] {2} -- cycle;
-\end{tikzpicture}
-\end{center}
+Sticking with the triangle \(ABC\), name by \(a,b\) and \(c\) the
+\textit{sides} opposite to vertices \(A,B\) and \(C\), respectively.
+These are two ways of describing the same thing (the filled triangle),
+but now you can clearly see that an order of \(a,b,c\) gives us a way
+of going around the triangle. Let's identify the order \([A,B,C]\)
+with \([a,b,c]\) and visualize it as going from face \(a\) to face \(b\) 
+and to face \(c\).
 
-There is 1 simplex of dimension 2, 6 simplices of dimension 1 and 5 simplices of dimension 0,
-corresponding to the filled triangle, the edges and the points, respectively. We give the 
-increasing index orientation. Consider the subcomplex given by \([0,1], [1,2], [2,0]\).
-The corresponding chain is
-\begin{displaymath}
-  c = [0,1] + [1,2] - [0, 2].
-\end{displaymath}
-Then, evaluation of \(c\) ask for (oriented) membership. Let's see what the
-boundary operator does to this subcomplex:
-\begin{displaymath}
-  \partial c = ([1] - [0]) + ([2] - [1]) - ([2] - [0]) = 0
-\end{displaymath}
-That is, the boundary of \(c\) has no members. Let's compute a different
-example. Consider the chain:
-\begin{displaymath}
-  c' = [0, 2] + [2, 4]
-\end{displaymath}
-Then, \(\partial c' = [0] + [4]\) and the boundary of \(c'\) has as members 0
-and 4. In these tiny examples, as its name suggest, the boundary operator
-actually computes the boundary of the subcomplex. Let's examine this behavior
-a bit more generally.
+You might argue that the order \([A,B,C]\) also gave a clear path of going
+around the triangle. I gave you the point, but, is it as clear the path for a
+tetrahedron? The nice thing of the above construction is that it works on any
+dimension.
 
 \medskip
-An orientation is \textit{the way} we walk around the boundary of a simplex,
-where by boundary we mean the codimension 1 subsimplices. Therefore, a chain is
-not just a simple selection of simplices, it's a selection of simplices and
-they way to walk around them. 
+\textbf{The boundary Map}~ 
+
+
+\subsection{Applications: Surface Reconstruction}
 
 
 \section{Simplicial Cohomology}
