--- a/math/simplicial_homology_and_cohomology.tex
+++ b/math/simplicial_homology_and_cohomology.tex
@@ -8,8 +8,9 @@
 
 \DeclareMathOperator{\im}{im}
 
-\title{Simplicial Homology and Cohomology\\ A Geometrical Introduction}
+\title{Simplicial Homology and Cohomology}
 \author{Sebastián Sánchez}
+\date{}
 
 \begin{document}
 
