--- a/coding/DiscreteLaplacian.ipynb
+++ b/coding/DiscreteLaplacian.ipynb
@@ -198,9 +198,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
+   "id": "0727984f-a87a-4a30-b811-ca396700d712",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-11-15T02:26:31.001490Z",
+     "iopub.status.busy": "2025-11-15T02:26:31.001032Z",
+     "iopub.status.idle": "2025-11-15T02:26:41.564306Z",
+     "shell.execute_reply": "2025-11-15T02:26:41.563041Z",
+     "shell.execute_reply.started": "2025-11-15T02:26:31.001444Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting numba\n",
+      "  Using cached numba-0.62.1-cp312-cp312-manylinux2014_x86_64.manylinux_2_17_x86_64.whl.metadata (2.8 kB)\n",
+      "Collecting llvmlite<0.46,>=0.45.0dev0 (from numba)\n",
+      "  Using cached llvmlite-0.45.1-cp312-cp312-manylinux2014_x86_64.manylinux_2_17_x86_64.whl.metadata (4.9 kB)\n",
+      "Requirement already satisfied: numpy<2.4,>=1.22 in /home/dasvaca/Documents/ms/mysite/venv/lib/python3.12/site-packages (from numba) (2.2.5)\n",
+      "Using cached numba-0.62.1-cp312-cp312-manylinux2014_x86_64.manylinux_2_17_x86_64.whl (3.8 MB)\n",
+      "Using cached llvmlite-0.45.1-cp312-cp312-manylinux2014_x86_64.manylinux_2_17_x86_64.whl (56.3 MB)\n",
+      "Installing collected packages: llvmlite, numba\n",
+      "\u001b[2K   \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2/2\u001b[0m [numba]━━━━━\u001b[0m \u001b[32m1/2\u001b[0m [numba]\n",
+      "\u001b[1A\u001b[2KSuccessfully installed llvmlite-0.45.1 numba-0.62.1\n",
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m25.1.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.3\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install numba"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "id": "c257d46f-3042-45e8-8d0b-2996aec72af3",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-11-15T02:38:31.245086Z",
+     "iopub.status.busy": "2025-11-15T02:38:31.244424Z",
+     "iopub.status.idle": "2025-11-15T02:38:31.263524Z",
+     "shell.execute_reply": "2025-11-15T02:38:31.261798Z",
+     "shell.execute_reply.started": "2025-11-15T02:38:31.245018Z"
+    },
     "tags": []
    },
    "outputs": [],
@@ -264,9 +309,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "fa13358a-2f82-40b7-a863-150c8f26a948",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-11-15T02:34:12.180966Z",
+     "iopub.status.busy": "2025-11-15T02:34:12.180258Z",
+     "iopub.status.idle": "2025-11-15T02:34:12.189222Z",
+     "shell.execute_reply": "2025-11-15T02:34:12.187803Z",
+     "shell.execute_reply.started": "2025-11-15T02:34:12.180852Z"
+    },
     "tags": []
    },
    "outputs": [],
@@ -283,9 +335,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "9947fe45-0993-4e6c-baca-359a396f3cfc",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-11-15T02:34:13.161184Z",
+     "iopub.status.busy": "2025-11-15T02:34:13.160725Z",
+     "iopub.status.idle": "2025-11-15T02:34:13.167682Z",
+     "shell.execute_reply": "2025-11-15T02:34:13.166219Z",
+     "shell.execute_reply.started": "2025-11-15T02:34:13.161136Z"
+    },
     "scrolled": true,
     "tags": []
    },
@@ -300,9 +359,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
+   "id": "74b57af6-074d-42f8-a2d7-8802647dfbb6",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-11-15T02:33:52.542779Z",
+     "iopub.status.busy": "2025-11-15T02:33:52.542338Z",
+     "iopub.status.idle": "2025-11-15T02:33:58.224096Z",
+     "shell.execute_reply": "2025-11-15T02:33:58.222773Z",
+     "shell.execute_reply.started": "2025-11-15T02:33:52.542735Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting meshio\n",
+      "  Downloading meshio-5.3.5-py3-none-any.whl.metadata (11 kB)\n",
+      "Requirement already satisfied: numpy>=1.20.0 in /home/dasvaca/Documents/ms/mysite/venv/lib/python3.12/site-packages (from meshio) (2.2.5)\n",
+      "Collecting rich (from meshio)\n",
+      "  Downloading rich-14.2.0-py3-none-any.whl.metadata (18 kB)\n",
+      "Collecting markdown-it-py>=2.2.0 (from rich->meshio)\n",
+      "  Downloading markdown_it_py-4.0.0-py3-none-any.whl.metadata (7.3 kB)\n",
+      "Requirement already satisfied: pygments<3.0.0,>=2.13.0 in /home/dasvaca/Documents/ms/mysite/venv/lib/python3.12/site-packages (from rich->meshio) (2.19.1)\n",
+      "Collecting mdurl~=0.1 (from markdown-it-py>=2.2.0->rich->meshio)\n",
+      "  Downloading mdurl-0.1.2-py3-none-any.whl.metadata (1.6 kB)\n",
+      "Downloading meshio-5.3.5-py3-none-any.whl (166 kB)\n",
+      "Downloading rich-14.2.0-py3-none-any.whl (243 kB)\n",
+      "Downloading markdown_it_py-4.0.0-py3-none-any.whl (87 kB)\n",
+      "Downloading mdurl-0.1.2-py3-none-any.whl (10.0 kB)\n",
+      "Installing collected packages: mdurl, markdown-it-py, rich, meshio\n",
+      "\u001b[2K   \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m4/4\u001b[0m [meshio]━━━━\u001b[0m \u001b[32m3/4\u001b[0m [meshio]n-it-py]\n",
+      "\u001b[1A\u001b[2KSuccessfully installed markdown-it-py-4.0.0 mdurl-0.1.2 meshio-5.3.5 rich-14.2.0\n",
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m25.1.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.3\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install meshio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "id": "ea892f14-7823-49c7-a65b-46e46de25110",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-11-15T02:37:19.057808Z",
+     "iopub.status.busy": "2025-11-15T02:37:19.057322Z",
+     "iopub.status.idle": "2025-11-15T02:37:19.147713Z",
+     "shell.execute_reply": "2025-11-15T02:37:19.146630Z",
+     "shell.execute_reply.started": "2025-11-15T02:37:19.057762Z"
+    },
     "tags": []
    },
    "outputs": [
@@ -310,16 +421,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "# Nodes  : (1845, 3)\n",
-      "# Faces  : (3686, 3)\n"
+      "# Nodes  : (8181, 3)\n",
+      "# Faces  : (16358, 3)\n"
      ]
     }
    ],
    "source": [
-    "MAX_FACES = 15_000\n",
+    "MAX_FACES = 40_000\n",
     "\n",
-    "#  Mesh from https://www.thingiverse.com/thing:6703649/files\n",
-    "mesh = pv.PolyData('resources/3D_models/blue_whale/files/ballena_azul_Lowpoly.stl')\n",
+    "mesh = pv.PolyData('../../graphics/3D_models/Stanford_Bunny_fem.stl')\n",
     "\n",
     "num_faces = len(mesh.faces) // 4\n",
     "\n",
@@ -336,12 +446,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "id": "1e3095d0-8ea0-4fbf-b08f-49b806e4a156",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-11-15T02:37:22.215294Z",
+     "iopub.status.busy": "2025-11-15T02:37:22.214817Z",
+     "iopub.status.idle": "2025-11-15T02:37:22.873316Z",
+     "shell.execute_reply": "2025-11-15T02:37:22.872065Z",
+     "shell.execute_reply.started": "2025-11-15T02:37:22.215246Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b917bdb3002d49ebb6fa42dec2093ff8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Widget(value='<iframe src=\"http://localhost:39993/index.html?ui=P_0x7f1f3ce497f0_0&reconnect=auto\" class=\"pyvi…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "save('images/discrete_laplacian_mesh.svg', mesh);"
+    "mesh.plot()"
    ]
   },
   {
@@ -354,14 +487,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "id": "6c57702c-e116-4241-9add-469f1b5a86d3",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-11-15T02:38:35.364576Z",
+     "iopub.status.busy": "2025-11-15T02:38:35.363337Z",
+     "iopub.status.idle": "2025-11-15T02:41:14.056037Z",
+     "shell.execute_reply": "2025-11-15T02:41:14.055202Z",
+     "shell.execute_reply.started": "2025-11-15T02:38:35.364501Z"
+    },
     "tags": []
    },
    "outputs": [],
    "source": [
     "L, M = laplace_matrix(nodes, triangles)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "8f32fcba-3300-4583-bc1e-192cbdd707fe",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-11-15T02:55:34.617684Z",
+     "iopub.status.busy": "2025-11-15T02:55:34.616456Z",
+     "iopub.status.idle": "2025-11-15T02:55:34.983271Z",
+     "shell.execute_reply": "2025-11-15T02:55:34.982169Z",
+     "shell.execute_reply.started": "2025-11-15T02:55:34.617612Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "E, U = spla.eigsh(L, k=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "13b30e4b-3069-4b93-aacc-f57a001e05f9",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-11-15T02:56:12.796250Z",
+     "iopub.status.busy": "2025-11-15T02:56:12.795727Z",
+     "iopub.status.idle": "2025-11-15T02:56:13.096315Z",
+     "shell.execute_reply": "2025-11-15T02:56:13.095189Z",
+     "shell.execute_reply.started": "2025-11-15T02:56:12.796201Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a1bdf8e3f6dc4029b56fd192e3ea6328",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Widget(value='<iframe src=\"http://localhost:39993/index.html?ui=P_0x7f1dc8bc6e40_14&reconnect=auto\" class=\"pyv…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "mesh.plot(scalars=U[:, -1], cmap=plt.get_cmap('jet'))"
    ]
   },
   {
@@ -375,7 +566,7 @@
    "source": [
     "from random import sample\n",
     "\n",
-    "default_cmap = plt.get_cmap('seismic')\n",
+    "default_cmap = plt.get_cmap('jet')\n",
     "\n",
     "source_indices = [np.argmax(nodes[:, 0]), np.argmax(nodes[:, 1] + nodes[:, 0])]\n",
     "source_field = np.zeros(len(nodes))\n",
@@ -392,7 +583,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "save('images/discrete_laplacian_heat_source.svg', mesh, scalars=source_field, clim=[vmin, vmax], cmap=default_cmap);\n",
+    "# save('images/discrete_laplacian_heat_source.svg', mesh, scalars=source_field, clim=[vmin, vmax], cmap=default_cmap);\n",
     "#  mesh.plot(scalars=source_field, clim=[vmin, vmax], cmap=default_cmap)"
    ]
   },
